# fixOpenclaw

./: .env.example  .envrc  .gitignore  BUGFIXES_v1.1.md  BUGFIXES_v1.2.md  BUGFIX_SUMMARY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_TEST_SUMMARY.md  INSTALL_DEPENDENCIES.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_REPORT.md  PROJECT_DELIVERY.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  PYTHON_313_SETUP.md  QUICKSTART.md  README.md  RESULTS_SUMMARY.txt  TESTING_REPORT_v1.2.md  TESTING_STATUS.md  TEST_REPORT.md  VERSION_1.2_RELEASE_NOTES.md  activate_python313.sh  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.sh  setup_python313.sh  test_backup_restore.py  verify.py
config/: config.yaml  patterns.yaml  strategies.yaml
src/: __init__.py
src/agents/: __init__.py  base_agent.py  diagnostic_agent.py  monitor_agent.py  orchestrator.py  repair_agent.py  validation_agent.py
src/llm_providers/: __init__.py  anthropic_provider.py  base_provider.py  google_provider.py  openai_provider.py  provider_factory.py
src/monitors/: __init__.py
src/repair_engine/: __init__.py
src/utils/: __init__.py  backup_manager.py  config_loader.py  error_handler.py  logger.py  metrics.py
tests/: __init__.py  test_agents.py  test_basic.py  test_llm_providers.py
ui/: __init__.py  dashboard.py
